--- a/20220314/autoagressive_model.ipynb
+++ b/20220314/autoagressive_model.ipynb
@@ -1073,7 +1073,10 @@
    "id": "cae9f3ad-26bb-49bf-9e92-0690e48e14d2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 데이터가 갖고 있는 특성만 기억함\n",
+    "# ANN 은 위치만 기억한."
+   ]
   },
   {
    "cell_type": "code",
