--- a/20220322/lemmatization.ipynb
+++ b/20220322/lemmatization.ipynb
@@ -1,63 +1,62 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "534ffdb5-bc86-4e20-9e27-c47ff4877fe8",
+   "cell_type": "markdown",
+   "id": "890870a1-d381-4965-ac70-d1b57f9a278f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import konlpy"
+    "## Lemmatization\n",
+    " - 표제어 -> 주어진 단어의 사전적인 어원을 찾는과정"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d6278d54-5958-4179-ab9e-3289fcb211db",
+   "id": "4dfc5113-e1e9-4845-8bae-c16ae511efad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from konlpy.tag import Okt"
+    "from nltk.stem import WordNetLemmatizer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0be94d9b-9b1a-4152-b9cc-a5c90e1b55a1",
+   "id": "f52b7292-4f69-44d2-a065-63bcdc38fb09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "okt = Okt()"
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "words = ['policy', 'doing', 'organization', 'have', 'going', 'love' , 'lives', \\\n",
+    "        'fly', 'dies', 'watched', 'has', 'starting']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b6929b22-2951-4673-a747-1b30e0eda6ce",
+   "id": "3a62b88d-9f0e-4acc-bec4-9ed0c34c5ec4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Program Files\\Java\\jdk-18\\bin\\server\n"
+      "표제어 추출: ['policy', 'doing', 'organization', 'have', 'going', 'love', 'life', 'fly', 'dy', 'watched', 'ha', 'starting']\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "print(os.environ.get('JAVA_HOME'))"
+    "print(\"표제어 추출:\", [lemmatizer.lemmatize(word) for word in words])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3519358c-4ec9-4771-b41e-094e5c229e3d",
+   "id": "e54e4c68-1b13-4926-a1cb-992efac45d77",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print"
-   ]
+   "source": []
   }
  ],
  "metadata": {
